--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="E-commerce product page by khalid"
     />
     <link rel="apple-touch-icon" href="./images/image-product-1.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="output.css"/>
-    <title>React App</title>
+    <title>Sneakers</title>
   </head>
   <body class="font-kumbh px-[130px] text-[#68707d] font-[400]">
     <noscript>You need to enable JavaScript to run this app.</noscript>
