--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="output.css"/>
     <title>Sneakers</title>
   </head>
-  <body class="font-kumbh px-[0px] md:px-[130px] text-[#68707d] font-[400]">
+  <body class="font-kumbh pt-[80px] lg:pt-[100px] px-[0px] lg:px-[130px] text-[#68707d] font-[400]">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
